<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_height="match_parent"
    tools:context=".noted.Todo">
    <include layout="@layout/main_toolbar_todo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Enter"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <Button
          android:id="@+id/bt_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Add"/>
        <Button
            android:id="@+id/bt_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Reset"/>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="474dp"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/list_row_main"/>


    <Button
        android:id="@+id/back7"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_weight="1"
        android:background="@drawable/style_btn_stroke_black_press_white"
        android:text="@string/back" />
    </LinearLayout>
</LinearLayout>