<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".visual.Shop"
    android:layout_gravity="center">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/mountains" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="8dp">
        <Button
            android:id="@+id/bacr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:paddingLeft="0dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:iconTint="@color/white"
            app:rippleColor="@color/black"
            style="@style/Widget.Material3.Button.TextButton"
            app:srcCompat="@drawable/ic_btn_arrow_back"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/obelix_pro"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:text="@string/back_to_shop"
            android:textColor="@color/white"
            android:textSize="40sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/obelix_pro"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:text="@string/tools"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:textSize="25sp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="Suspicious0dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/transparent"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/cardview5"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/tools_img"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"

                            android:layout_gravity="left"
                            android:layout_weight="1"
                            android:padding="1dp"
                            android:src="@drawable/tool_g" />


                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:padding="5dp"
                            android:text=" +10"
                            android:textColor="@color/white"
                            android:textSize="45dp"></TextView>
                        <TextView
                            android:id="@+id/tool_txt_c"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="$10"
                            android:textSize="25sp"
                            android:textColor="@color/yellow2"
                            android:padding="5dp"
                            android:layout_gravity="center_vertical"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/l2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
            android:layout_marginTop="10dp"
                tools:ignore="Suspicious0dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/tools2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cardview5"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/tools_img2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_weight="1"
                        android:padding="1dp"
                        android:src="@drawable/tool_n" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:padding="5dp"
                        android:text="+200"
                        android:textColor="@color/white"
                        android:textSize="45sp"></TextView>
                    <TextView
                        android:id="@+id/tool_txt_c2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="$200"
                        android:textSize="25sp"
                        android:textColor="@color/yellow2"
                        android:padding="5dp"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            </LinearLayout>

        <LinearLayout
            android:id="@+id/l3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="Suspicious0dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/tools3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cardview5"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/tools_img3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="1dp"
                        android:src="@drawable/tool_b" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:padding="5dp"
                        android:text="+300"
                        android:textColor="@color/white"
                        android:textSize="45sp"></TextView>
                    <TextView
                        android:id="@+id/tool_txt_c3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="$300"
                        android:textSize="25sp"
                        android:textColor="@color/yellow2"
                        android:padding="5dp"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/l4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="Suspicious0dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/tools4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cardview5"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/tools_img4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="1dp"
                        android:src="@drawable/tool_u" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:padding="5dp"
                        android:text="+400"
                        android:textColor="@color/white"
                        android:textSize="45dp"></TextView>
                    <TextView
                        android:id="@+id/tool_txt_c4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="$400"
                        android:textSize="25sp"
                        android:textColor="@color/yellow2"
                        android:padding="5dp"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/l5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="Suspicious0dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/tools5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cardview5"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/tools_img5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="1dp"
                        android:src="@drawable/tool_q" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:padding="5dp"
                        android:text="+500"
                        android:textColor="@color/white"
                        android:textSize="45sp"></TextView>
                    <TextView
                        android:id="@+id/tool_txt_c5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="$500"
                        android:textSize="25sp"
                        android:textColor="@color/yellow2"
                        android:padding="5dp"
                        android:layout_gravity="center_vertical"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        </LinearLayout>






</RelativeLayout>